bk_ida/gccida/g1/output_init_element
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/c-typeck.c:6697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/c-typeck.c:6698:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/c-typeck.c:6701:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/c-typeck.c:6702:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/c-typeck.c:6768:19: error: expected expression
if ( ( tree_node *)global_trees == v11 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/c-typeck.c:6768:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)global_trees == v11 ) 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_init_element/src/obj/c-typeck.o] Error 1
